--- a/lesson4_assignment/index.html
+++ b/lesson4_assignment/index.html
@@ -1,4 +1,4 @@
-<!-- Sophia Vo February 15th, 2019 -->
+<!-- Sophia Vo March 7th, 2019 -->
 <html>
     <head>
 	    <meta charset="UTF-8">
@@ -7,13 +7,16 @@
 	    <meta Sophia Vo>
 	    <title> Hospitality </title>
     </head>
+    <img src="images/sumopaint-edit-architecture-buildings-business-331990.png" >
     <body>
         <h1> Hospitality </h1>
+        <p><a href = "index.html">Event Planning</a> | <a href ="media.html"> Media</a> | </a><a href = "author.html"> Author</a></p>
         <h2> Event Planning </h2>
-        <p> Hospitality has two divisions within it as a major at FSU, in the Dedman school of Hospitality. They are Tourism managament and Event planning. As the name implies Tourism managment Hospitality majors specialize in tourism and providing pleasurable experiences. Event planning is similar but more so oriented followng what guests request versus giving guests an enjoyable experience.</p>
+        <p>Hospitality has two divisions within it as a major at FSU, in the Dedman school of Hospitality. They are Tourism managament and Event planning. As the name implies Tourism managment Hospitality majors specialize in tourism and providing pleasurable experiences. Event planning is similar but more so oriented followng what guests request versus giving guests an enjoyable experience.</p>
         <p>Hospitality is not easy on being accomodating those working in the field. Due it Tourism and Event managment being examples of primary aspects of the field, it's clear to see that most hours would be during holidays and weekends. But this does not necessarily mean what is generally other people's work scheudles is off hours for those in hospitality. As preperations and work before the main operations occur would happen during the typical work hours of those in Hospitality. </p>
         <p>Hospitality is one of the most abundant jobs. FSU has been known for having a high or quick job placement rate for their Dedman school of Hospotality graduates, likely due to their intership/work hours requirment for their majors to graduate. Anything relating to customer service falls in line with hospitality. Examples are many as it falls to hotel managment, restaurants, casinos, cuises, weddings, and so on.</p>
         <p>Hospitality requires those within the field to have good social skills. To be good with people, to present to the guests that they are welcome and will have a good time. Time managment and leaderships skills are also necessary for any higher position in the field. People need to be flexiable and adaptble to give any person hospitable experience.</p>
+        <img src="images/joinedimage-business-carnival-catering-6222.png" >
         <p> <i><b>&quot;Hospitality: making your guests feel like they're at home, even if you wish they were.&quot; - Justine Vogt</b></i></p>
         <hr>
         <h3> Common Job Areas &amp;  Expected abilities:</h3>
@@ -69,27 +72,6 @@
             <li> Relocation is necessary for some jobs</li>
         </ol>
         <hr>
-        <h1> <i> References </i></h1>
-        <h3> Hospitality Industry Job Titles and Descriptions</h3>
-        <ul>
-            <li> The Balance Careers</li>
-            <li> Author: Alison Doyle</li>
-            <li> Last updated: Decemeber 11th, 2018</li>
-            <li> https://www.thebalancecareers.com/hospitality-job-titles-2061496</li>
-        </ul>
-        <h3> 7 Essential Skills for a Career in Hospitality </h3>
-        <ul>
-            <li> Kangan Institute</li>
-            <li> Date: November 3rd, 2016</li>
-            <li> https://www.kangan.edu.au/students/blog/essential-skills-for-a-career-in-hospitality</li>
-        </ul>
-        <h3> 10 Tweetable Quotes About Hospitality</h3>
-        <ul>
-            <li> Ignite Hospitality</li>
-            <li> Author: Aimie Neighbour</li>
-            <li> Date: March 9th, 2015</li>
-            <li>https://www.ignitehospitality.com/blog/10-tweetable-quotes-about-hospitality/</li>
-        </ul>
         <h3> Pros &amp; Cons of Working in the Hospitality Industry</h3>
         <ul>
             <li> Global Hospitality Portal</li>
@@ -97,7 +79,8 @@
             <li> https://www.soegjobs.com/2017/11/05/pros-cons-working-hospitality-industry/</li>
         </ul>
         <hr>
-        &copy; <i> Sophia Vo, syv17@my.fsu.edu</i>
-        
+        <p></p><i><a href = "mailto:syv17@my.fsu.edu"> Sophia Vo</a></i></p>
     </body>
+    
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
 </html>
