Lesson 6 final commit

--- a/lesson6_assignment/media.html
+++ b/lesson6_assignment/media.html
@@ -1,4 +1,4 @@
-<!-- Sophia Vo March 26th, 2019 -->
+<!-- Sophia Vo April 8th, 2019 -->
 <html>
     <head>
 	    <meta charset="UTF-8">
@@ -8,13 +8,25 @@
 	    <title> Hospitality </title>
 	    <link rel="stylesheet" href="style.css">
 	</head>
-	    <img src="images/sumopaint-edit-architecture-buildings-business-331990.png" >
-	    <h1> Hospitality </h1>
-	    <p><a href = "index.html">Event Planning</a> | <a href ="media.html"> Media</a> | <a href = "author.html"> Author</a></p>
-        <h2> Media </h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/u0bqEeCVI_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <p></p><i><a href = "mailto:syv17@my.fsu.edu">Sophia Vo</a></i></p>
+	<body>
+		<div id= "container">
+			<div id="header">
+			    <img src="images/sumopaint-edit-architecture-buildings-business-331990.png" >
+			    <h1> Hospitality </h1>
+			    <p><a href = "index.html">Event Planning</a> | <a href ="media.html"> Media</a> | <a href = "author.html"> Author</a></p>
+			</div><!-- end of header -->
+			<div id="content">
+	        <h2> Media </h2>
+	        <iframe width="560" height="315" src="https://www.youtube.com/embed/u0bqEeCVI_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	        <hr>
+	        </div><!-- end of content -->
+	        <div id= "sidebar">
+                <p><i><strong>&quot;Hospitality: making your guests feel like they're at home, even if you wish they were.&quot; - Justine Vogt</strong></i></p>
+            </div><!-- end of sidebar -->
+	        <div id= "footer">
+	        	<p><i><a href = "mailto:syv17@my.fsu.edu">Sophia Vo</a></i></p>
+     			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
+    		</div><!-- end of footer -->
+    </div> <!-- end of container -->
     </body>
-     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
 </html>
