Project 2 first commit

--- a/lesson6_assignment/index.html
+++ b/lesson6_assignment/index.html
@@ -1,4 +1,4 @@
-<!-- Sophia Vo April 8th, 2019 -->
+<!-- Sophia Vo April 19th, 2019 -->
 <html>
     <head>
 	    <meta charset="UTF-8">
@@ -7,12 +7,20 @@
 	    <meta Sophia Vo>
 	    <title> Hospitality </title>
 	    <link rel="stylesheet" href="style.css">
+	    <link href="style-navbor.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div id= "container">
             <div id="header">
                 <img src="images/sumopaint-edit-architecture-buildings-business-331990.png" >
                 <h1> Hospitality </h1>
+                <div id="navbar">
+                    <ul id="menu">
+                        <li><a href="author.html" class="button selected">Page 1</a></li>
+                        <li><a href="index.html" class="button">Page 2</a></li>
+                        <li><a href="media.html" class="button">Page 3</a></li>
+                    </ul>
+                </div> <!-- end of navbar -->
                 <p><a href = "index.html">Event Planning</a> | <a href ="media.html"> Media</a> | </a><a href = "author.html"> Author</a></p>
             </div> <!-- end of header -->
             <div id="content">
