--- a/lesson7_project_1/author.html
+++ b/lesson7_project_1/author.html
@@ -1,4 +1,4 @@
-<!-- Sophia Vo April 8th, 2019 -->
+<!-- Sophia Vo April 19th, 2019 -->
 <html>
     <head>
 	    <meta charset="UTF-8">
@@ -7,6 +7,7 @@
 	    <meta Sophia Vo>
 	    <title> Hospitality </title>
 	    <link rel="stylesheet" href="style.css">
+	    <link href="style-navbar.css" rel="stylesheet" type="text/css">
     </head>
     
     <body>
@@ -14,7 +15,13 @@
             <div id="header">
                 <img src="images/sumopaint-edit-architecture-buildings-business-331990.png" >
                 <h1> Hospitality </h1>
-                <p><a href = "index.html">Event Planning</a> | <a href ="media.html"> Media</a> | <a href = "author.html"> Author</a></p>
+                <div id="navbar">
+                    <ul id="menu">
+                        <li><a href="index.html" class="button">Event Planning</a></li>
+                        <li><a href="media.html" class="button">Media</a></li>
+                        <li><a href="author.html" class="button selected">Author</a></li>
+                    </ul>
+                </div> <!-- end of navbar -->
             </div> <!-- end of header -->
             <div id="content">
                 <h2>About the Author </h2>
